DATE       AUTHOR      CHANGE
---------- ----------- --------------------------------------------------------
2010-08-07 patrick     Added gadget::AnalogEventInterface<C,G>,
                       gadget::CommandEventInterface<C,G> and
                       gadget::StringEventInterface<C,G>.
                       NEW VERSION: 2.1.7
2010-08-01 patrick     Added gadget::DigitalEventInterface<C,G>,
                       gadget::MouseMultiClickEventInterface<C,G> and
                       gadget::DigitalMultiClickEventInterface<C,G>.
                       NEW VERSION: 2.1.6
2010-07-31 patrick     Changed gadget::Digital to use
                       gadget::DeviceData<gadget::DigitalState::State>
                       instead of gadget::DeviceData<int>.
                       NEW VERSION: 2.1.5
2010-07-24 patrick     Added gadget::PositionEventInterface<C,G>.
                       NEW VERSION: 2.1.4
2010-07-24 patrick     Implemented synchronized eevnt delivery.
                       NEW VERSION: 2.1.3
2010-07-20 patrick     Added gadget::ProxyTraits<T> and the event interface
                       core architecture. Only immediate event delivery is
                       implemented so far.
                       NEW VERSION: 2.1.2
2010-07-12 patrick     Added gadget::DeviceTraits<T> and gadget::DeviceData<T>.
                       Refactored gadget::TypedProxy<T> so that every proxy
                       type has a (virtual) getData() method that returns the
                       data specific to its device type.
                       NEW VERSION: 2.1.1
2010-06-19 patrick     VR Juggler 3.0 branch created.
                       NEW VERSION: 2.1.0